RESOLVED FIXED267655
REGRESSION (271261@main): [ Monterey Ventura Debug ] ASSERTION FAILED: isValid() in std::unique_ptr<ScrollingStateTree> WebCore::ScrollingStateTree::commit(LayerRepresentation::Type)
https://bugs.webkit.org/show_bug.cgi?id=267655
Summary REGRESSION (271261@main): [ Monterey Ventura Debug ] ASSERTION FAILED: isVali...
Marta Darbinyan
Reported 2024-01-17 14:40:37 PST
Description: scrollingcoordinator/scrolling-tree/scroller-with-proxy-nodes-loses-layer.html Is a constant crash on macOS Ventura and Monterey Debug on ToT. The suspected culprit is 271261@main. Sonoma is not effected and tests are stable on Sonoma on ToT. 271261@main - Failed 271260@main - Passed This issue can be reproduced using the command: run-webkit-tests --root --exit-after-n-failures 1 --debug scrollingcoordinator/scrolling-tree/scroller-with-proxy-nodes-loses-layer.html History: https://results.webkit.org/?suite=layout-tests&test=scrollingcoordinator%2Fscrolling-tree%2Fscroller-with-proxy-nodes-loses-layer.html&version_name=Monterey&version_name=Ventura&flavor=wk2&style=debug Crash Log: stderr: ScrollingStateOverflowScrollProxyNode 9 refers to non-existant overflow node 8 ASSERTION FAILED: isValid() /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebCore/page/scrolling/ScrollingStateTree.cpp(337) : std::unique_ptr<ScrollingStateTree> WebCore::ScrollingStateTree::commit(LayerRepresentation::Type) 1 0x20b26dcf9 WTFCrash 2 0x29c4c316b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x2a1089f6d WebCore::ScrollingStateTree::commit(WebCore::LayerRepresentation::Type) 4 0x2a10b287f WebCore::ThreadedScrollingCoordinator::commitTreeStateIfNeeded() 5 0x29e1c6b79 WebCore::ScrollingCoordinatorMac::commitTreeStateIfNeeded() 6 0x2a10b329b WebCore::ThreadedScrollingCoordinator::willStartRenderingUpdate() 7 0x2a0ef5ce0 WebCore::Page::updateRendering() 8 0x23f2b9761 WebKit::WebPage::updateRendering() 9 0x23e4288b3 WebKit::TiledCoreAnimationDrawingArea::updateRendering(WebKit::TiledCoreAnimationDrawingArea::UpdateRenderingType) 10 0x23e42dc37 WebKit::TiledCoreAnimationDrawingArea::renderingUpdateRunLoopCallback() 11 0x23e44acd8 WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea(WebKit::WebPage&, WebKit::WebPageCreationParameters const&)::$_0::operator()() const 12 0x23e44ac99 WTF::Detail::CallableWrapper<WebKit::TiledCoreAnimationDrawingArea::TiledCoreAnimationDrawingArea(WebKit::WebPage&, WebKit::WebPageCreationParameters const&)::$_0, void>::call() 13 0x29c4e3c22 WTF::Function<void ()>::operator()() const 14 0x2a110d722 WebCore::RunLoopObserver::runLoopObserverFired() 15 0x2a11db2ed WebCore::RunLoopObserver::runLoopObserverFired(__CFRunLoopObserver*, unsigned long, void*) 16 0x7ff8129c7444 __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ 17 0x7ff8129c736b __CFRunLoopDoObservers 18 0x7ff8129c5f7f CFRunLoopRunSpecific 19 0x7ff8138522a3 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 20 0x7ff8138d4c98 -[NSRunLoop(NSRunLoop) run] 21 0x7ff81263e7f3 _xpc_objc_main 22 0x7ff81263e1f7 xpc_main 23 0x23d61ef6d WebKit::XPCServiceMain(int, char const**) 24 0x23f734b5b WKXPCServiceMain 25 0x105473f42 main 26 0x7ff81259241f start com.apple.WebKit.WebContent.Development terminated (pid 67051) for reason: crash LEAK: 1 WebPageProxy Link: https://build.webkit.org/results/Apple-Ventura-Debug-WK2-Tests/273130@main%20(3801)/scrollingcoordinator/scrolling-tree/scroller-with-proxy-nodes-loses-layer-crash-log.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-17 14:41:28 PST
EWS
Comment 2 2024-01-17 15:15:55 PST
Test gardening commit 273150@main (46526a33636d): <https://commits.webkit.org/273150@main> Reviewed commits have been landed. Closing PR #22882 and removing active labels.
Matt Woodrow
Comment 3 2024-01-18 14:23:32 PST
EWS
Comment 4 2024-01-21 12:23:23 PST
Committed 273275@main (2439631889af): <https://commits.webkit.org/273275@main> Reviewed commits have been landed. Closing PR #22937 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.