Cherry-pick 2439631889af. rdar://121148828

REGRESSION (271261@main): [ Monterey Ventura Debug ] ASSERTION FAILED: isValid() in std::unique_ptr<ScrollingStateTree> WebCore::ScrollingStateTree::commit(LayerRepresentation::Type)
    https://bugs.webkit.org/show_bug.cgi?id=267655
    <rdar://121148828>

    Reviewed by Simon Fraser.

    ThreadedScrollingCoordinator updates the scrolling tree state at the start of
    the rendering update (before rAF callbacks), so that async scrolls can be
    performed if the rendering update takes too long.

    We need to make sure the compositing layer tree is up to date in order for
    this to be valid.

    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/page/scrolling/ThreadedScrollingCoordinator.cpp:
    (WebCore::ThreadedScrollingCoordinator::willStartRenderingUpdate):

    Canonical link: https://commits.webkit.org/273275@main

Canonical link: https://commits.webkit.org/272448.366@safari-7618-branch